openshift/jenkins/jenkins-persistent-template.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    creationTimestamp: null
    labels:
      template: jenkins-persistent-template
    name: jenkins
  spec:
    portalIP: ""
    ports:
    - name: web
      nodePort: 0
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      name: jenkins
    sessionAffinity: None
    type: ClusterIP
- apiVersion: v1
  kind: Route
  metadata:
    creationTimestamp: null
    labels:
      template: jenkins-persistent-template
    name: jenkins
  spec:
    tls:
      caCertificate: |-
        [...]
      certificate: |-
        -----BEGIN CERTIFICATE-----
        MIIDIjCCAgqgAwIBAgIBATANBgkqhkiG9w0BAQUFADCBoTELMAkGA1UEBhMCVVMx
[...]
        +Dzv5hqgSfvMG392KWh5f8xXfJNs4W5KLbZyl901MeReiLrPH3w=
        -----END CERTIFICATE-----
      key: |-
        -----BEGIN PRIVATE KEY-----
        MIICeAIBADANBgkqhkiG9w0BAQEFAASCAmIwggJeAgEAAoGBAMrvgu6ZTTefNN7j
[...]
        TcFT4touIo7oriFJ
        -----END PRIVATE KEY-----
      termination: edge
    to:
      kind: Service
      name: jenkins
- apiVersion: v1
  kind: PersistentVolumeClaim
  metadata:
    labels:
      template: jenkins-persistent-template
    name: jenkins
  spec:
    accessModes:
    - ReadWriteOnce
    resources:
      requests:
        storage: 512Mi
- apiVersion: v1
  kind: DeploymentConfig
  metadata:
    creationTimestamp: null
    labels:
      template: jenkins-persistent-template
    name: jenkins
  spec:
    replicas: 1
    selector:
      name: jenkins
    strategy:
      resources: {}
      type: Recreate
    template:
      metadata:
        creationTimestamp: null
        labels:
          name: jenkins
      spec:
        containers:
        - capabilities: {}
          image: ${JENKINS_IMAGE}
          imagePullPolicy: IfNotPresent
          name: jenkins
          resources: {}
          securityContext:
            capabilities: {}
            privileged: false
          terminationMessagePath: /dev/termination-log
          volumeMounts:
          - mountPath: /var/lib/jenkins
            name: jenkins-data
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        volumes:
        - name: jenkins-data
          persistentVolumeClaim:
            claimName: jenkins
    triggers:
    - imageChangeParams:
        automatic: true
        containerNames:
        - jenkins
        from:
          kind: ImageStreamTag
          name: jenkins:latest
          namespace: openshift
        lastTriggeredImage: ""
      type: ImageChange
    - type: ConfigChange
kind: List
metadata: {}
